--- a/src/app.html
+++ b/src/app.html
@@ -17,7 +17,7 @@
 	%svelte.head%
 </head>
 
-<body class="bg-white text-black dark:bg-black dark:text-white transition-colors bg-fixed">
+<body class="bg-white dark:bg-black text-black dark:text-white transition-colors bg-fixed">
 	<div id="svelte">%svelte.body%</div>
 </body>
 
